--- a/index.html
+++ b/index.html
@@ -12,127 +12,146 @@
     <!-- Header Section -->
     <header class="bg-main text-second">
       <!-- Navbar -->
-      <nav class="mx-auto font-momken relative">
-        <div class="nav-bar">
-          <div
-            class="container max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-between items-center h-16"
-          >
-            <!-- Logo -->
-            <div class="flex-shrink-0">
-              <a href="#" class="">
-                <img
-                  src="Images/logo.svg"
-                  alt="Crusto logo"
-                  class="md:w-32 h-20"
-                  width="80"
-                  height="80"
-                />
-              </a>
-            </div>
+      <nav class="nav_bar mx-auto font-momken relative">
+        <div
+          class="container max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-between items-center h-16"
+        >
+          <!-- Logo -->
+          <div class="flex-shrink-0">
+            <a href="#" class="">
+              <img
+                src="Images/logo.svg"
+                alt="Crusto logo"
+                class="md:w-32 h-20"
+                width="80"
+                height="80"
+              />
+            </a>
+          </div>
 
-            <!-- Desktop Menu -->
-            <div class="hidden md:flex space-x-4 items-center">
-              <div class="menu flex">
-                <a href="#" class="hover:text-yellow-500 px-4">الرئيسية</a>
-                <a href="#" class="hover:text-yellow-500 px-4">القائمة</a>
-                <a href="#" class="hover:text-yellow-500 px-4">عننا</a>
-                <a href="#" class="hover:text-yellow-500 px-4">التواصل</a>
-              </div>
-
-              <!-- Hotline -->
-              <div class="hidden md:flex items-center p-5 flex-row mx-3">
-                <img src="Images/icons/call.svg" alt="call icons" />
-                <div class="mx-3">
-                  <div class="flex-col">
-                    <h6>الخط الساخن</h6>
-                    <a href="#" class="hover:text-yellow-500">0515 96 36 36</a>
-                  </div>
-                </div>
-              </div>
-
-              <!-- User and Cart Icons -->
-              <div class="info flex items-center m-0">
-                <button id="sign-in-btn" class="user px-3">
-                  <img src="Images/icons/account.svg" alt="user account" />
-                </button>
-                <button class="cart px-3">
-                  <img
-                    src="Images/icons/shopping-cart.svg"
-                    alt="Shopping Cart"
-                  />
-                </button>
-              </div>
-            </div>
-
-            <!-- Mobile Menu Button -->
-            <div class="md:hidden">
-              <button
-                id="mobile-menu-button"
-                class="text-second focus:outline-none"
-              >
-                <img src="Images/icons/menu-square.svg" alt="menu icon" />
-              </button>
-            </div>
-
-            <!-- Mobile Menu -->
-            <div
-              id="mobile-menu"
-              class="bg-main hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex justify-center items-center"
-            >
-              <div
-                class="px-4 pt-2 pb-3 space-y-1 flex flex-col items-center menu-transition"
-              >
-                <div class="menu flex flex-col">
-                  <a href="#" class="hover:text-yellow-500 px-4 mx-4"
+          <!-- Desktop Menu -->
+          <div class="hidden md:flex space-x-4 items-center">
+            <div class="menu flex" id="">
+              <ul id="nav__links" class="flex">
+                <li id="nav__item">
+                  <a
+                    href="#section--1"
+                    class="nav__link hover:text-yellow-500 px-4"
                     >الرئيسية</a
                   >
-                  <a href="#" class="hover:text-yellow-500 px-4 mx-4"
+                </li>
+                <li id="nav__item">
+                  <a
+                    href="#section--2"
+                    class="nav__link hover:text-yellow-500 px-4"
                     >القائمة</a
                   >
-                  <a href="#" class="hover:text-yellow-500 px-4 mx-4">عننا</a>
-                  <a href="#" class="hover:text-yellow-500 px-4 mx-4"
+                </li>
+                <li id="nav__item">
+                  <a
+                    href="#section--3"
+                    class="nav__link hover:text-yellow-500 px-4"
+                    >عننا</a
+                  >
+                </li>
+                <li id="nav__item">
+                  <a
+                    href="#section--4"
+                    class="nav__link hover:text-yellow-500 px-4"
                     >التواصل</a
                   >
+                </li>
+              </ul>
+            </div>
+
+            <!-- Hotline -->
+            <div class="hidden md:flex items-center p-5 flex-row mx-3">
+              <img src="Images/icons/call.svg" alt="call icons" />
+              <div class="mx-3">
+                <div class="flex-col">
+                  <h6>الخط الساخن</h6>
+                  <a href="#" class="hover:text-yellow-500">0515 96 36 36</a>
                 </div>
-                <button
-                  id="close-menu"
-                  class="mt-4 bg-yellow-500 text-white px-4 py-2 rounded"
-                >
-                  إغلاق
-                </button>
               </div>
+            </div>
+
+            <!-- User and Cart Icons -->
+            <div class="info flex items-center m-0">
+              <button id="sign-in-btn" class="user px-3">
+                <img src="Images/icons/account.svg" alt="user account" />
+              </button>
+              <button class="cart px-3">
+                <img src="Images/icons/shopping-cart.svg" alt="Shopping Cart" />
+              </button>
+            </div>
+          </div>
+
+          <!-- Mobile Menu Button -->
+          <div class="md:hidden">
+            <button
+              id="mobile-menu-button"
+              class="text-second focus:outline-none"
+            >
+              <img src="Images/icons/menu-square.svg" alt="menu icon" />
+            </button>
+          </div>
+
+          <!-- Mobile Menu -->
+          <div
+            id="mobile-menu"
+            class="bg-main hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex justify-center items-center"
+          >
+            <div
+              class="px-4 pt-2 pb-3 space-y-1 flex flex-col items-center menu-transition"
+            >
+              <div class="menu flex flex-col">
+                <a href="#" class="hover:text-yellow-500 px-4 mx-4">الرئيسية</a>
+                <a href="#" class="hover:text-yellow-500 px-4 mx-4">القائمة</a>
+                <a href="#" class="hover:text-yellow-500 px-4 mx-4">عننا</a>
+                <a href="#" class="hover:text-yellow-500 px-4 mx-4">التواصل</a>
+              </div>
+              <button
+                id="close-menu"
+                class="mt-4 bg-yellow-500 text-white px-4 py-2 rounded"
+              >
+                إغلاق
+              </button>
             </div>
           </div>
         </div>
-
-        <!-- Hero Section -->
-        <section class="hero-main-page text-center w-full">
-          <video
-            src="Images/main1.mp4"
-            class="absolute top-0 left-0 w-full h-full object-cover"
-            autoplay
-            loop
-            muted
-            playsinline
-          ></video>
-
-          <div class="hero-content w-full z-10 relative">
-            <h2 class="text-4xl font-bold mb-4">أهلاً بكم في مطعم كراستو!</h2>
-            <p class="text-lg mb-6">
-              أفضل بيتزا على الطريقة الإيطالية بلمسة عربية
-            </p>
-            <a
-              href="#menu"
-              class="bg-main text-second px-8 py-3 relative top-20 rounded-lg hover:bg-red-700 transition"
-              >استعرض قائمتنا</a
-            >
-          </div>
-        </section>
       </nav>
+      <!-- Hero Section -->
+      <section
+        id="section--1"
+        class="hero-main-page text-center w-full border-0"
+      >
+        <video
+          src="Images/main1.mp4"
+          class="absolute top-0 left-0 w-full h-full object-cover"
+          autoplay
+          loop
+          muted
+          playsinline
+        ></video>
+
+        <div class="hero-content w-full z-10 relative">
+          <h2 class="text-4xl font-bold mb-4 font-momken">
+            أهلاً بكم في مطعم كراستو!
+          </h2>
+          <p class="text-lg mb-6">
+            أفضل بيتزا على الطريقة الإيطالية بلمسة عربية
+          </p>
+          <button
+            class="btn btn--scroll-to bg-main text-second px-8 py-3 relative top-20 rounded-lg hover:bg-red-700 transition"
+          >
+            استعرض قائمتنا
+          </button>
+        </div>
+      </section>
     </header>
     <main>
       <!-- menu -->
-      <section id="menu" class="py-16 pb-36">
+      <section id="section--2" class="section menu py-16 pt-24 pb-36">
         <div class="container mx-auto text-center">
           <h2 class="text-4xl font-bold mb-12 text-main font-momken">
             قائمة الطعام
@@ -268,30 +287,8 @@
         </div>
       </section>
 
-      <!-- about Crusto -->
-      <section id="about" class="py-16 bg-main text-second">
-        <div class="container mx-auto text-center">
-          <h2 class="text-4xl font-bold mb-8 text-accentGold font-momken">
-            عن مطعم كراستو
-          </h2>
-          <p class="mb-6 text-lg">
-            في كراستو، نجلب لكم النكهات الإيطالية الأصيلة ممزوجة بلمسة عربية
-            فريدة. نقدم لكم أشهى أنواع البيتزا، التي تُعد بحب وعناية باستخدام
-            أجود المكونات الطازجة.
-          </p>
-          <p class="mb-4 text-lg">
-            نحن نؤمن أن الطعام هو تجربة يجب أن تُعاش، لذا نحرص على تقديم بيتزا
-            لذيذة تتميز بقوامها الرائع ونكهاتها المتنوعة.
-          </p>
-          <p class="mb-4 text-lg">
-            تعالوا وانضموا إلينا لتستمتعوا بتجربة طعام استثنائية في أجواء مريحة
-            وودودة. نعدكم بأن تكون كل لقمة من كراستو مليئة بالحب والشغف.
-          </p>
-        </div>
-      </section>
-
       <!-- Special Offers Section -->
-      <section id="special-offers" class="py-16 bg-second">
+      <section class="section special-offers py-16 bg-second">
         <div class="container mx-auto text-center">
           <h2 class="text-4xl font-bold mb-8 text-main font-momken">
             العروض الخاصة
@@ -350,10 +347,32 @@
         </div>
       </section>
 
+      <!-- about Crusto -->
+      <section id="section--3" class="section about py-16 bg-main text-second">
+        <div class="container mx-auto text-center px-3">
+          <h2 class="text-4xl font-bold mb-8 text-accentGold font-momken">
+            عن مطعم كراستو
+          </h2>
+          <p class="mb-6 text-lg">
+            في كراستو، نجلب لكم النكهات الإيطالية الأصيلة ممزوجة بلمسة عربية
+            فريدة. نقدم لكم أشهى أنواع البيتزا، التي تُعد بحب وعناية باستخدام
+            أجود المكونات الطازجة.
+          </p>
+          <p class="mb-4 text-lg">
+            نحن نؤمن أن الطعام هو تجربة يجب أن تُعاش، لذا نحرص على تقديم بيتزا
+            لذيذة تتميز بقوامها الرائع ونكهاتها المتنوعة.
+          </p>
+          <p class="mb-4 text-lg">
+            تعالوا وانضموا إلينا لتستمتعوا بتجربة طعام استثنائية في أجواء مريحة
+            وودودة. نعدكم بأن تكون كل لقمة من كراستو مليئة بالحب والشغف.
+          </p>
+        </div>
+      </section>
+
       <!-- Contact Section -->
       <section
-        id="contact"
-        class="py-16 grid grid-cols-1 md:grid-cols-2 gap-8 justify-center items-center"
+        id="section--4"
+        class="section contact py-16 grid grid-cols-1 md:grid-cols-2 gap-8 justify-center items-center"
       >
         <div class="container mx-auto text-center">
           <h2 class="text-3xl font-semibold font-momken text-main mb-6">
@@ -424,13 +443,13 @@
         <input
           type="text"
           placeholder="اسم المستخدم"
-          id="user-name"
+          id="user-name-in"
           class="w-full p-3 mb-3 rounded-md"
         />
         <input
           type="password"
           placeholder="كلمة السر"
-          id="password"
+          id="password-in"
           class="w-full p-3 mb-3 rounded-md"
         />
         <button
@@ -501,13 +520,13 @@
               <input
                 type="email"
                 placeholder="البريد الالكتروني"
-                id="Email"
+                id="Email-up"
                 class="w-full p-3 mb-3 rounded-md"
               />
               <input
                 type="password"
                 placeholder="كلمة السر"
-                id="password"
+                id="password-up"
                 class="w-full p-3 mb-3 rounded-md"
               />
               <button
